--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ cxx = "1.0.78"
 autocxx = { version = "0.22.4" }
 thiserror = {version = "1.0.37" }
 zerocopy = { version = "0.6.1" }
+byteorder = { version = "1.4.3" }
 
 [build-dependencies]
 autocxx-build = { version = "0.22.4" }
