--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
 cxx = "1.0.78"
 autocxx = { version = "0.22.4" }
 thiserror = { version = "1.0.37" }
 zerocopy = { version = "0.6.1" }
 byteorder = { version = "1.4.3" }
 itertools = { version = "0.10.5" }
+fst = "0.4.7"
 
 [build-dependencies]
 autocxx-build = { version = "0.22.4" }
