--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ zerocopy = { version = "0.6.1" }
 byteorder = { version = "1.4.3" }
 itertools = { version = "0.10.5" }
 fst = "0.4.7"
+tracing = "*"
+tracing-subscriber = { version = "*", features = ["env-filter"] }
 
 [build-dependencies]
 autocxx-build = { version = "0.22.4" }
