--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ thiserror = { version = "1.0.37" }
 zerocopy = { version = "0.6.1" }
 byteorder = { version = "1.4.3" }
 itertools = { version = "0.10.5" }
-
+fst = "0.4.7"
+tracing = { version = "0.1.37" }
+tracing-subscriber = { version = "0.3.16", features=['env-filter'] }
 [build-dependencies]
 autocxx-build = { version = "0.22.4" }
 anyhow = { version = "1.0.65" }
